# tess

./: CMakeLists.txt  NativePlayer.sln  README.md
.github/workflows/: main.yml
App/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  NativePlayer.App.vcxproj  Package.appxmanifest  README_VS_PROJECT.md  pch.h
Core/: CMakeLists.txt  MpvLoader.cpp  MpvLoader.h  MpvPlayer.cpp  MpvPlayer.h  PlayerCore.vcxproj
Core/tests/: smoke_test.cpp
